objects/BLN_ExceptionCountryState__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Events__c</fullName>
        <label>BLN Events</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipLabel>BLN_ExceptionCountryState</relationshipLabel>
        <relationshipName>BLN_ExceptionCountryState</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InputCountry__c</fullName>
        <label>InputCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputState__c</fullName>
        <label>InputState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutputCountry__c</fullName>
        <label>OutputCountry</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>BLN_ExceptionCountryState</relationshipLabel>
        <relationshipName>BLN_ExceptionCountryState</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OutputState__c</fullName>
        <label>OutputState</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>BLN_ExceptionCountryState</relationshipLabel>
        <relationshipName>BLN_ExceptionCountryState</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN_ExceptionCountryState</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ECS-{0000}</displayFormat>
        <label>BLN_ExceptionCountryState Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN_ExceptionCountryState</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>